--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,59 @@
 /* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Bebas Neue", sans-serif;
+  background-color: rgba(0, 0, 0, 0.792); 
 }
 
 .genero-container {
   margin: 20px;
   padding: 20px;
-  border: 1px solid #ccc;
-  background-color: #f8f8f8;
+}
+
+h1 {
+  content: url("https://fontmeme.com/permalink/240613/7f2b3684906b3dec1b9271f72bb63c97.png");
+  margin-top: 20px;
+  margin-left: 10px;
 }
 
 h2 {
   font-size: 1.5rem;
   margin-bottom: 10px;
+  color: white;
+  font-size: 50px;
 }
 
+img {
+  width: 300px;
+}
+
+h3 {
+  color: white; 
+  font-size: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 300px;
+}
+
+#genero-28 {
+  display: flex; 
+  flex-wrap: wrap;
+  gap: 10px;
+
+}
+
+#genero-12 {
+  display: flex; 
+  flex-wrap: wrap;
+  gap: 10px;
+
+}
+
+#genero-53 {
+  display: flex; 
+  flex-wrap: wrap;
+  gap: 10px;
+
+}
 
